# Minecraft-Server-Launcher

./: README.md  pyproject.toml  requirements.txt
aws/: lambda_function.py  minecraft_monitor.sh
src/minecraft_server_launcher/: __main__.py
